covclover command for scrutinizer

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "semistandard && tape ./test/test-*.js",
-    "coverage": "nyc --reporter=lcov --reporter=text-summary tape ./test/test-*.js"
+    "coverage": "nyc --reporter=lcov --reporter=text-summary tape ./test/test-*.js",
+    "covclover": "nyc --reporter=clover tape ./test/test-*.js"
   },
   "repository": {
     "type": "git",
