--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,48 @@
-name: Build and Test CI
+name: Build and Test
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - '**'
+  workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
-  ci:
-    permissions:
-      contents: read
+  build:
+    name: 'Build and Test (Node: ${{ matrix.node.name }})'
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, '[ci skip]') || github.event_name == 'workflow_dispatch' }}
     strategy:
       matrix:
-        node_version: ['12', '14']
-
+        node:
+          - name: LTS
+            version: lts/*
+          - name: Previous LTS
+            version: lts/-1
+          - name: Current
+            version: node
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out the code
+        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.5.1
+      - name: Set up Node.js environment
+        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # v3.5.1
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node.version }}
+          cache: npm
 
-      - name: Install dependencies and test
-        run: npm cit
+      - name: Update npm
+        run: npm i -g npm
+
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run postinstall scripts
+        run: npm rebuild && npm run prepare --if-present
+
+      - name: Run tests
+        run: npm test
