--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,32 +1,84 @@
 name: Publish Package
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types:
+      - released
+  workflow_dispatch:
+    inputs:
+      npm:
+        default: "yes"
+        description: Publish to NPM?
+        required: true
+
+permissions:
+  contents: read
 
 jobs:
-  publish:
-    permissions:
-      contents: read
-      id-token: write
+  prepare:
+    name: Prepare the source code
     runs-on: ubuntu-latest
+    if: github.event_name == 'release' || github.event.inputs.npm == 'yes'
     steps:
-      - name: Check out the code
+      - name: Checkout source
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        with:
+          ref: ${{ github.event.release.tag_name }}
 
       - name: Set up Node.js environment
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
           node-version: lts/*
-          registry-url: https://registry.npmjs.org/
+          cache: npm
 
       - name: Install dependencies
         run: npm ci --ignore-scripts
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Run postinstall scripts
+        run: npm rebuild && npm run prepare --if-present
+
+      - name: Create tarball
+        run: npm pack
+
+      - name: Save tarball
+        uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4
+        with:
+          name: package
+          path: "*.tgz"
+          retention-days: 1
+
+  publish:
+    permissions:
+      contents: none
+      id-token: write
+    name: Publish package
+    runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      matrix:
+        registry:
+          - npm
+        include:
+          - registry: npm
+            secret: NPM_TOKEN
+            registry_url: https://registry.npmjs.org/
+    steps:
+      - name: Set up Node.js environment
+        if: github.event.inputs[matrix.registry] == 'yes' || github.event_name == 'release'
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+        with:
+          registry-url: ${{ matrix.registry_url }}
+
+      - name: Download tarball
+        if: github.event.inputs[matrix.registry] == 'yes' || github.event_name == 'release'
+        uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
+        with:
+          name: package
+
       - name: Publish package
-        run: npm publish
+        if: github.event.inputs[matrix.registry] == 'yes' || github.event_name == 'release'
+        run: npm publish *.tgz
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+          NODE_AUTH_TOKEN: ${{ secrets[matrix.secret] }}
