--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "winston": ">=3"
   },
   "dependencies": {
-    "nodemailer": "^7.0.0"
+    "nodemailer": "^6.0.0 || ^7.0.0"
   },
   "publishConfig": {
     "access": "public",
